Try removing flicker between the pages, possibly caused by fixed position toolbars.

--- a/search-result-formatting.css
+++ b/search-result-formatting.css
@@ -1,3 +1,6 @@
+body{
+   background-color: #176273 !important
+}
 @font-face {
     font-family: "OpenSans Regular";
     src: url(fonts/OpenSans-Regular.ttf);
